[package]
name = "labar"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2021"

[dependencies]
regex = "1"
chrono = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

sha2 = "0.10"
base16ct = { version = "0.2.0", features = ["alloc"] }

dirs = "6"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8" }
reqwest = { version = "0.12", features = ["stream"] }

structopt = "0.3"

sysinfo = "0.35"
tempfile = "3"
