[package]
name = "labar"
version = "0.1.0"
authors = ["Anton Jansson <anton_jansson@live.se>"]
edition = "2021"
description = "Layer based archive"
license = "MIT"
homepage = "https://github.com/svenslaggare/labar"

[package.metadata.deb]
assets = [
    ["target/release/labar", "usr/bin/labar", "755"],
    ["completions/labar.bash", "etc/bash_completion.d/labar", "644"]
]

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14"

log = "0.4"
fern = "0.7"

rusqlite = { version = "0.37.0", features = ["bundled", "serde_json", "chrono"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.9" }

sha2 = "0.10"
base16ct = { version = "0.3", features = ["alloc"] }
base64 = "0.22"
zip = "5"

dirs = "6"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }

rcgen = "0.14"
uuid = { version = "1", features = ["v4"] }

reqwest = { version = "0.12", features = ["stream"] }

structopt = "0.3"

sysinfo = "0.37"
tempfile = "3"

croner = { version = "3", features = ["serde"] }